--- a/src/HomePage/HomePage.module.css
+++ b/src/HomePage/HomePage.module.css
@@ -1,6 +1,6 @@
 .logo{
-    width: 170px;
-    height: 170px;
-    margin-top: 75px;
-    justify-content: space-between;
+    width: 18.5vw;
+    margin-top: 5.2vh;
+    justify-content: center;
+    margin-left: 40.75vw;
 }
