--- a/src/Search/Search.module.css
+++ b/src/Search/Search.module.css
@@ -1,15 +1,4 @@
-.logo{
-    width: 40px;
-    height: 40px;
-    justify-content: space-between;
-}
-
-.input-control{
-    min-width: 500px;
-}
-
 .search{
-    margin-left: 200px;
-    margin-right: 200px;
-    margin-top: 50px;
+    margin-left: 10vw;
+    margin-right: 10vw;
 }
