--- a/src/SearchResults/SearchResultsSummary/SearchResultsSummary.module.css
+++ b/src/SearchResults/SearchResultsSummary/SearchResultsSummary.module.css
@@ -11,3 +11,31 @@
     padding-left: 3vw;
     padding-top: 3.1vh;
 }
+
+.students{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.min{
+    margin-right: 15px;
+}
+
+.max{
+    margin-left: 15px;
+}
+
+.line{
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.category{
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+.check-box{
+    margin-left: 8px;
+}
