--- a/src/ClubsList/ListOfClubs.module.css
+++ b/src/ClubsList/ListOfClubs.module.css
@@ -15,11 +15,11 @@
 }
 
 .actual-content{
+    height: 100%;
     display:flex;
     flex-direction: column;
-    justify-content: space-around;
+    
 }
-
 
 .tag-f{
     margin-right: 5px;
@@ -55,4 +55,18 @@
 
 .link-button{
     margin-right: 10px;
+}
+
+.column{
+    display:flex;
+    align-items: stretch;
+    height: 100%;
+}
+
+.inner-box{
+    height:100%;
+}
+
+.words{
+    margin-top:auto;
 }
