--- a/src/ClubsList/ListOfClubs.module.css
+++ b/src/ClubsList/ListOfClubs.module.css
@@ -2,7 +2,7 @@
     padding-left: 3vw;
     padding-right: 2vw;
     padding-bottom: 20px;
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     align-items: center;
 
@@ -49,7 +49,7 @@
 .header{
     display: flex;
     justify-content: space-between;
-    padding-left: 3.55vw;
+    padding-left: 2.6vw;
     padding-right: 3.55vw;
 }
 
@@ -69,4 +69,9 @@
 
 .words{
     margin-top:auto;
+}
+
+.club-box{
+    display: flex;
+    flex-wrap: wrap;
 }
