--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -1,9 +1,8 @@
 .landing-background
-{
+{   
     background-image: url(./background.jpg);
     background-size: 100%;
-    height: 100vh;
-    background-position: center;
-    background-repeat: repeat;
+    background-position: top;
+    background-repeat: repeat-y;
 }
 
